refactor: simplify code, optimize math, and remove redundant imports and unused methods.